:bug: css fix block__collapse--form-data

--- a/css/less/components/site-block__collapse.less
+++ b/css/less/components/site-block__collapse.less
@@ -155,7 +155,7 @@ ________________________________________________________________________________
 			.desktop({
 				bottom: 40px;
 				left: 0;
-				position: absolute;
+				//position: absolute;
 				top: auto;
 			});
 
